--- a/appspec.yml
+++ b/appspec.yml
@@ -6,8 +6,8 @@ files:
 permissions:
   - object: /var/www/topdust
     pattern: "**"
-    owner: ubuntu
-    group: ubuntu
-    mode: 644
+    owner: root
+    group: root
+    mode: 755
     type:
       - file
