Added script hooks

--- a/appspec.yml
+++ b/appspec.yml
@@ -18,3 +18,7 @@ permissions:
     mode: 755
     type:
       - directory
+hooks:    
+    AfterInstall:
+    - location: scripts/movetos3.sh
+      runas: root
